Delete form property "height" to fix button START loading on iPhone 6. Add height 64px to nations-list and player item for all resolutions

--- a/style.css
+++ b/style.css
@@ -147,8 +147,8 @@ body{
 .list-of-players_item{
     font-family: 'Cinzel', serif;
     font-size: 15px;
-    margin-bottom: 41.5px;
     margin-right: 30px;
+    height: 64px;
 }
 .content-container{
     width: 100%;
@@ -161,7 +161,9 @@ body{
 }
 .list-of-nations{
     display: flex;
+    align-items: center;
     list-style: none;
+    height: 64px;
 }
 .list-of-nations_item{
     font-family: 'Rokkitt', serif;
@@ -187,7 +189,6 @@ body{
     .list-of-players_item{
         font-size: 14px;
         margin-right: 15px;
-        margin-bottom: 44px;
     }
     .for-my-boys{
         top: 80%;
